chinh sua file config va them bai post

--- a/config.toml
+++ b/config.toml
@@ -47,7 +47,7 @@ description            = "Don't panic"
 email                  = "you@example.space"
 extracssfiles          = [ "/css/override.css" ]       # In your `static` directory, add/remove files as necessary.
 faviconfile            = "img/leaf.ico"
-github                 = "//github.com/you"
+github                 = "//github.com/gohugoblog/gohugoblog.github.io"
 instagram              = "//instagram.com/you"
 px500                  = "//500px.com/username"
 lang                   = "en"
